kubernetes/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-api
spec:
  type: NodePort
  selector:
    app: event-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
